# picpay-case

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
notebook/: notebook.ipynb
src/: main.py
tests/: test_main.py
