[tool.poetry]
name = "picpay-case"
version = "0.1.0"
description = ""
authors = ["José Marcos <jmmirandaneves@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
tinydb = "^4.8.1"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.5.3"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
pyarrow = "^17.0.0"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """ 
    -v
    --cov=src
    --cov-report=term-missing
    --disable-warnings
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
